--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
     </div>
 
     <h2 class="text-center">Busca por categoria: </h2>
-    <div class="container row">
 
-        <div class="col-6">
+    <div class="container row mx-auto g-4">
+
+        <div class="col-6 col-md4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -124,7 +125,7 @@
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 col-md4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -139,7 +140,7 @@
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 col-md4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -154,7 +155,7 @@
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 col-md4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -169,7 +170,7 @@
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 col-md4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -184,7 +185,7 @@
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 col-md4 col-xxl-2">
             <div class="card">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
@@ -202,104 +203,124 @@
 
     <h2 class="text-center">Produtos que estão bombando!</h2>
 
-    <div class="container">
+    <div class="container row mx-auto g-4">
 
-        <div class="card">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                    dy=".3em">Image cap</text>
-            </svg>
-            <div class="card-body">
-                <h5 class="card-title">Produto</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <p>R$30,00</p>
-                <a href="#" class="btn btn-primary">Ver mais</a>
+        <div class="col-6 col-md4 col-xxl-4">
+            <div class="card">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
+                        dy=".3em">Image cap</text>
+                </svg>
+                <div class="card-body">
+                    <h5 class="card-title">Produto</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <p>R$30,00</p>
+                    <a href="#" class="btn btn-primary">Ver mais</a>
+                </div>
             </div>
         </div>
 
-        <div class="card">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                    dy=".3em">Image cap</text>
-            </svg>
-            <div class="card-body">
-                <h5 class="card-title">Produto</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <p>R$30,00</p>
-                <a href="#" class="btn btn-primary">Ver mais</a>
+        <div class="col-6 col-md4 col-xxl-4">
+            <div class="card">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
+                        dy=".3em">Image cap</text>
+                </svg>
+                <div class="card-body">
+                    <h5 class="card-title">Produto</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <p>R$30,00</p>
+                    <a href="#" class="btn btn-primary">Ver mais</a>
+                </div>
             </div>
         </div>
 
-        <div class="card">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                    dy=".3em">Image cap</text>
-            </svg>
-            <div class="card-body">
-                <h5 class="card-title">Produto</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <p>R$30,00</p>
-                <a href="#" class="btn btn-primary">Ver mais</a>
+        <div class="col-6 col-md4 col-xxl-4">
+            <div class="card">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
+                        dy=".3em">Image cap</text>
+                </svg>
+                <div class="card-body">
+                    <h5 class="card-title">Produto</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <p>R$30,00</p>
+                    <a href="#" class="btn btn-primary">Ver mais</a>
+                </div>
             </div>
         </div>
 
-        <div class="card">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                    dy=".3em">Image cap</text>
-            </svg>
-            <div class="card-body">
-                <h5 class="card-title">Produto</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <p>R$30,00</p>
-                <a href="#" class="btn btn-primary">Ver mais</a>
+        <div class="col-6 col-md4 col-xxl-4">
+            <div class="card">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
+                        dy=".3em">Image cap</text>
+                </svg>
+                <div class="card-body">
+                    <h5 class="card-title">Produto</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <p>R$30,00</p>
+                    <a href="#" class="btn btn-primary">Ver mais</a>
+                </div>
             </div>
         </div>
 
-        <div class="card">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                    dy=".3em">Image cap</text>
-            </svg>
-            <div class="card-body">
-                <h5 class="card-title">Produto</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <p>R$30,00</p>
-                <a href="#" class="btn btn-primary">Ver mais</a>
+        <div class="col-6 col-md4 col-xxl-4">
+            <div class="card">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
+                        dy=".3em">Image cap</text>
+                </svg>
+                <div class="card-body">
+                    <h5 class="card-title">Produto</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <p>R$30,00</p>
+                    <a href="#" class="btn btn-primary">Ver mais</a>
+                </div>
             </div>
         </div>
 
-        <div class="card">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                    dy=".3em">Image cap</text>
-            </svg>
-            <div class="card-body">
-                <h5 class="card-title">Produto</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <p>R$30,00</p>
-                <a href="#" class="btn btn-primary">Ver mais</a>
+        <div class="col-6 col-md4 col-xxl-4">
+            <div class="card">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
+                        dy=".3em">Image cap</text>
+                </svg>
+                <div class="card-body">
+                    <h5 class="card-title">Produto</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <p>R$30,00</p>
+                    <a href="#" class="btn btn-primary">Ver mais</a>
+                </div>
             </div>
         </div>
+
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
