--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meteora</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
@@ -320,6 +321,31 @@
         </div>
 
     </div>
+
+    <section class="text-center">
+
+        <h2>Conheça todas as nossas facilidades</h2>
+
+        <div>
+            <div><i class="bi bi-x-diamond fs-1"></i></div>
+            <div>PAGUE PELO PIX</div>
+            <div class="texto-menor">Ganhe 5% off em pagamentos via pix</div>
+        </div>
+
+        <div>
+            <div><i class="bi bi-arrow-repeat fs-1"></i></div>
+            <div>TROCA GRÁTIS</div>
+            <div class="texto-menor">Fique livre para trocar em 30 dias</div>
+        </div>
+
+        <div>
+            <div><i class="bi bi-flower1 fs-1"></i></div>
+            <div>SUSTENTABILIDADE</div>
+            <div class="texto-menor">Moda responável, que respeita o meio ambiente</div>
+        </div>
+
+
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
