Alteracoes de informacoes de rede social e algumas edicoes sobre o layout

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/logoOllietech.png" type="image/x-icon"><!--Aqui vai o link para imagem que fica na aba do navegador-->
+    <link rel="shortcut icon" href="./assets/logoOllietech.png" type="image/x-icon">
+    <!--Aqui vai o link para imagem que fica na aba do navegador-->
     <title>Ollietech</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -17,7 +18,9 @@
 
     <nav class="navbar navbar-expand-md bg-black navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><h1 class="m-0"><img class="d-block" src="./assets/logo2.png" alt="Logo da empresa OLLITECH"></h1></a>
+            <a class="navbar-brand" href="#">
+                <h1 class="m-0"><img class="d-block" src="./assets/logo2.png" alt="Logo da empresa OLLITECH"></h1>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -336,26 +339,26 @@
 
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center gap-3 px-3">
             <div class="divs-facilidades d-flex align-items-center">
-                <div><i class="bi bi-linkedin fs-1"></i></div>
+                <div><i class="bi bi-github fs-1"></i></div>
                 <div>
-                    <div class="ms-3 mb-1">RAFAEL PEDRO</div>
-                    <div class="texto-menor ms-3">Desenvolvedor fullstack</div>
+                    <div class="ms-3 mb-1">GITHUB</div>
+                    <div class="texto-menor ms-3">Repósitorios Ollietech</div>
                 </div>
             </div>
 
             <div class="divs-facilidades d-flex align-items-center">
                 <div><i class="bi bi-instagram fs-1"></i></div>
                 <div>
-                    <div class="ms-3 mb-1">@RAFAEL.PEDRO</div>
-                    <div class="texto-menor ms-3"></div>
+                    <div class="ms-3 mb-1">INSTAGRAM</div>
+                    <div class="texto-menor ms-3">@Ollietech_Systems</div>
                 </div>
             </div>
 
             <div class="divs-facilidades d-flex align-items-center">
-                <div><i class="bi bi-flower1 fs-1"></i></div>
+                <div><i class="bi bi-whatsapp fs-1"></i></div>
                 <div>
-                    <div class="ms-3 mb-1">SUSTENTABILIDADE</div>
-                    <div class="texto-menor ms-3">Moda responsável, que respeita o meio ambiente.</div>
+                    <div class="ms-3 mb-1">(44) 99894-4504 </div>
+                    <div class="texto-menor ms-3">Entre em contato com a nossa equipe.</div>
                 </div>
             </div>
         </div>
@@ -366,8 +369,8 @@
         <h5>Quer receber nossas novidades? Cadastre-se!</h5>
 
         <div class="input-group my-3">
-            <input type="email" class="form-control" placeholder="Digite seu e-mail"
-                aria-label="Digite seu e-mail" aria-describedby="button-addon2" />
+            <input type="email" class="form-control" placeholder="Digite seu e-mail" aria-label="Digite seu e-mail"
+                aria-describedby="button-addon2" />
             <!--<button type="button" id="button-addon2">Enviar</button>-->
             <button class="btn btn-primary bg-black" type="submit">enviar</button>
         </div>
