ateracao de cores

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
     </div>
 
-    <section class="pb-4">
+    <section class="pb-4 bg-black text-bg-dark">
 
         <h2 class="text-center">Conheça nossas redes</h2>
 
@@ -377,7 +377,7 @@
     </form>
 
 
-    <footer class="text-center">
+    <footer class="text-center bg-black text-bg-dark">
         <p class="py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Rafael Alencar Pedro | Curso de Bootstrap5
             Alura.</p>
     </footer>
